# Streaming-Data-Engineering-Project-flights-data-

./: .gitignore  .gitlab-ci.yml  README.md  dag.py  docker-compose.yaml  main.py  notebook_viz.ipynb  pyproject.toml
data/Airlines/: Airlines.csv
data/Airports/: Airports.csv
data/Flights/year=2024/month=8/day=20/: flight_36b33124.parquet  flight_36b543d1.parquet  flight_36b59c5e.parquet  flight_36b60552.parquet  flight_36b60809.parquet  flight_36b60874.parquet  flight_36b61d1a.parquet  flight_36b62574.parquet  flight_36b625a7.parquet  flight_36b626b9.parquet  flight_36b62d5d.parquet  flight_36b62ef7.parquet  flight_36b63236.parquet  flight_36b6333e.parquet  flight_36b63418.parquet  flight_36b6347d.parquet  flight_36b635db.parquet  flight_36b63681.parquet  flight_36b6409c.parquet  flight_36b644c2.parquet  flight_36b649cb.parquet  flight_36b65121.parquet  flight_36b652b5.parquet  flight_36b65338.parquet  flight_36b6564f.parquet  flight_36b657b0.parquet  flight_36b65c6a.parquet  flight_36b65cab.parquet  flight_36b65f87.parquet  flight_36b65ffb.parquet  flight_36b663da.parquet  flight_36b6642b.parquet  flight_36b66465.parquet  flight_36b66474.parquet  flight_36b66723.parquet  flight_36b66ab8.parquet  flight_36b66b14.parquet  flight_36b66bae.parquet  flight_36b66ef6.parquet  flight_36b6739f.parquet  (+24 more)
src/: builder_airlines.py  builder_airports.py  consumer.py  producer.py  viz.py
tests/: test_viz.py
tests/data_test/: get_continent_mean_flights.csv
tests/data_test/data/Flights/year=2024/month=8/day=20/: flight_36b2c393.parquet  flight_36b494a0.parquet  (+79 more)
